Fix leve plate/frame extraction, scrollbar issue with pinned blocks in small size mode.

--- a/Garland.Web/db/style.css
+++ b/Garland.Web/db/style.css
@@ -3371,7 +3371,7 @@ body.loaded #sidebar .patch-link {
     #main .block,
     #pinned .block,
     #main .block.expanded {
-        width: 100%;
+        width: 99.6%;
     }
 
     .bonuses .progress-container {
